plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.6'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'bookcalendar'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	maven { url = uri("https://repo.spring.io/milestone") } //spring ai 저장소
	maven {url = uri("https://repo.spring.io/snapshot")} //스냅샷 저장소 추가
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.ai:spring-ai-bom:0.8.0"
	}
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	/* MariaDB */
	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
	/* Jpa */
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	/* MyBatis */
	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
	/* Redis */
	// implementation 'org.springframework.session:spring-session-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	/* JWT */
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
	/*lombok*/
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	/* Swagger */
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.4'
	/* Spring AI */
	implementation 'org.springframework.ai:spring-ai-openai-spring-boot-starter:0.8.0'
	/* Prometheus */
	implementation 'io.micrometer:micrometer-registry-prometheus'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	/* jackson */
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.0'
	/* DigestUtils */
	implementation 'commons-codec:commons-codec:1.15'
	/* Webclient */
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
}

tasks.named('test') {
	useJUnitPlatform()
}

/* 생성자 파라미터 이름이 보존되어 @Qualifier와 함께 @RequiredArgsConstructor 사용 시 의존성 주입 오류를 방지 */
tasks.withType(JavaCompile).configureEach {
	options.compilerArgs += ["-parameters"]
}

